# cmh-driverless-sim

./: .gitignore  Dockerfile  README.md  run_container.sh
cmh_bringup/: CMakeLists.txt  package.xml
cmh_bringup/launch/: sim.launch.py
cmh_description/: CMakeLists.txt  package.xml
cmh_description/config/: configDry.yaml
cmh_description/urdf/: car.urdf.xacro  cmh_base.urdf.xacro  wheels.urdf.xacro
cmh_gazebo/: CMakeLists.txt  README.md  package.xml
cmh_gazebo/csv/: .~lock.acceleration.csv#
cmh_gazebo/models/big_cone/: model.config  model.sdf
cmh_gazebo/models/blue_cone/: model.config  model.sdf
cmh_gazebo/models/orange_cone/: model.config  model.sdf
cmh_gazebo/models/small_track/: model.config  model.sdf
cmh_gazebo/models/yellow_cone/: model.config  model.sdf
cmh_gazebo/script/track_generator/: track_generator.py  track_generator_gui.py
cmh_gazebo/worlds/: small_track.sdf  test_cone.sdf
cmh_perception/: package.xml  setup.cfg  setup.py
cmh_sensors/: CMakeLists.txt  package.xml
cmh_sensors/urdf/: all_sensors.urdf.xacro  monocular_camera.urdf.xacro
cmh_workspace/src/cmh_sim/: CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml  package.xml
cmh_workspace/src/cmh_sim/config/: plugin_params.yaml
cmh_workspace/src/cmh_sim/docs/: CHANGELOG.md  License.md  MKDocsTut.md  README.md  extra.css
cmh_workspace/src/cmh_sim/docs/miscellaneous/: debugging.md  troubleshooting.md
cmh_workspace/src/cmh_sim/docs/plugins/: base.md  configuration.md  custom-plugin.md  more-plugins.md  plugin-failure.md  sensors.md  state-machine.md
cmh_workspace/src/cmh_sim/docs/user-guide/: getting-started.md  sim-architecture.md  user-interface.md
cmh_workspace/src/cmh_sim/eufs_racecar/car/urdf/: wheels.urdf.xacro
cmh_workspace/src/cmh_sim/eufs_racecar/robots/ads-dv/: robot.urdf.xacro
cmh_workspace/src/cmh_sim/eufs_racecar/robots/eufs/: robot.urdf.xacro
cmh_workspace/src/cmh_sim/eufs_racecar/sensors/urdf/: OS1-128.urdf.xacro  VLP-16R.urdf.xacro  all_sensors.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro  zed.urdf.xacro
cmh_workspace/src/cmh_sim/include/eufs_sim2/: sim_node.hpp  simulation.hpp  state_machine.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/concept/: imu_noise_sampler.hpp  message_converter.hpp  noise_sampler.hpp  oss_noise_sampler.hpp  wheel_speed_noise_sampler.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/core/: base.hpp  eufs_core.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/logger/: logger.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/noise/: independent_gaussian.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/plugin/: base.hpp  cone_collision_tracker.hpp  cone_fusion.hpp  control_input.hpp  force_publisher.hpp  gnss.hpp  gt_transform.hpp  imu_plugin.hpp  oss_plugin.hpp  sensor_plugin.hpp  state_machine_plugin.hpp  state_publisher.hpp  track_changer.hpp  twist_publisher.hpp  vehicle_state.hpp  wheel_speed.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/sensors/: gps.hpp  imu.hpp  oss.hpp  vehicle_forces.hpp  wheel_speeds.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/time/: time.hpp
cmh_workspace/src/cmh_sim/include/eufs_sim2/type/: control.hpp  state.hpp  track.hpp
cmh_workspace/src/cmh_sim/launch/: eufs_sim2.launch.py  publish_urdf.launch.py
cmh_workspace/src/cmh_sim/src/: control.cpp  eufs_core.cpp  independent_gaussian.cpp  sim_node.cpp  simulation.cpp  state_machine.cpp  time.cpp
cmh_workspace/src/cmh_sim/src/plugin/: base.cpp  cone_collision_tracker.cpp  cone_fusion.cpp  control_input.cpp  force_publisher.cpp  gnss.cpp  gt_transform.cpp  imu_plugin.cpp  oss_plugin.cpp  state_machine_plugin.cpp  state_publisher.cpp  track_changer.cpp  twist_publisher.cpp  vehicle_state.cpp  wheel_speed.cpp
docs/: implementation_plan.md
